# the-plutus-scaffold

./: .envrc.example  .gitignore  .hlint.yaml  .markdownlint.yaml  131.main.js  317.main.js  317.main.js.LICENSE.txt  Makefile  README.md  cabal.project  flake.nix  fourmolu.yaml  hlint.yaml  index.html  main.js  pre-commit-check.nix  pre-commit.nix  roadmap.md
compiled-scripts/: Index.json
docs/: script-format.md
frontend/: .envrc.example  README.md  package-lock.json  package.json  project.toml  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  ContractParams.js  Offchain.js  index.d.ts  index.tsx
offchain/: .envrc.example  Makefile  README.md  mlabs-plutus-template-offchain.cabal  package-lock.json  package.json  packages.dhall  spago-packages.nix  spago.dhall  webpack.config.js
offchain/exe/: E2E.purs  Main.purs  ScriptImports.purs
offchain/psm-test/: Spec.hs
offchain/src/: Api.purs  CompiledScripts.js  CompiledScripts.purs  DeploymentContractParams.purs  LocalContractParams.purs  NFT.purs  OffchainApi.purs  OffchainApiCommon.purs  OffchainApiDeployment.purs  OffchainApiLocal.purs  PlyScripts.purs  Scripts.js  Scripts.purs  Utils.purs  Validator.purs
offchain/test/: E2E.purs  Main.purs  e2e.env
onchain/: .envrc.example  cardano-mlabs-template-onchain.cabal  hie.yaml  mlabs-plutus-template-onchain.cabal
onchain-plutus/: cabal.project  onchain-plutus.cabal
onchain-plutus/src/: Lib.hs
onchain/exporter/: Main.hs
onchain/exporter-lib/: Exporter.hs
onchain/exporter-lib/Exporter/: Hash.hs  JSON.hs  Types.hs  Writer.hs
onchain/psm-test/: Spec.hs  Types.hs
onchain/src/: AlwaysSucceeds.hs
onchain/src/Plutarch/: AlwaysSucceeds.hs  ExampleContracts.hs
onchain/src/PlutusTx/: AlwaysSucceeds.hs
