cabal-version: 3.0
name:          mlabs-plutus-template-offchain
version:       0.0.1
synopsis:      TODO
description:   TODO
license:
license-file:
author:        MLabs
maintainer:    TODO
copyright:     TODO
category:      TODO
build-type:    Simple

flag dev
  description: Enable lean development
  default:     False
  manual:      True

-- Common sections

common common
  default-language:   Haskell2010
  ghc-options:
    -Wcompat -Wincomplete-uni-patterns -Wmissing-deriving-strategies
    -Wredundant-constraints -Wmissing-home-modules
    -Wmissing-export-lists -Wno-unticked-promoted-constructors -Wall
    -fwarn-unused-imports

  if !flag(dev)
    ghc-options: -Werror

  build-depends:
    , base
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

library
  import:          common
  exposed-modules:

test-suite psm-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: psm-test
  build-depends:
    , mlabs-plutus-template-offchain
    , plutus-simple-model
    , ply-core
