cabal-version:      3.0
name:               mlabs-plutus-template-onchain-plutus
version:            0.0.0.1
author:             MLabs
maintainer:         MLabs
copyright:          MLabs
category:           TODO
build-type:         Simple
extra-source-files: README.md

common common
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fplugin=RecordDotPreprocessor -Wincomplete-uni-patterns
    -Wredundant-constraints

  -- -Werror

  build-depends:
    , base
    , cardano-api              >=1.36.0
    , plutus-ledger-api
    , plutus-tx
    , record-dot-preprocessor
    , record-hasfield
    , text

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common
  exposed-modules: Lib

  -- , Plutus.AlwaysSucceeds

  other-modules:
  build-depends:   bytestring

  -- , plutus-ledger-api
  hs-source-dirs:  src
