cabal-version:      3.0
name:               mlabs-plutus-template-onchain
version:            0.0.0.1
author:             MLabs
maintainer:         MLabs
copyright:          MLabs
category:           Web
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

common common
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fplugin=RecordDotPreprocessor -Wincomplete-uni-patterns
    -Wredundant-constraints -Werror

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common
  exposed-modules: 
    , AlwaysSucceeds
                 
  other-modules:

  build-depends:
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , plutarch

  hs-source-dirs:  src

executable exporter
  import:         common
  main-is:        Main.hs
  build-depends:
    , base
    , bytestring
    , cardano-api
    , mlabs-plutus-template-onchain
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , text

  hs-source-dirs: exporter
