cabal-version:      3.0
name:               mlabs-plutus-template-onchain
version:            0.0.0.1
author:             MLabs
maintainer:         MLabs
copyright:          MLabs
category:           TODO
build-type:         Simple
extra-source-files: README.md

common common
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fplugin=RecordDotPreprocessor -Wincomplete-uni-patterns
    -Wredundant-constraints -Werror

  build-depends:
    , base                     
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common
  exposed-modules: 
    , Plutarch.AlwaysSucceeds
    , Plutus.AlwaysSucceeds
                 
  other-modules:

  build-depends:
    -- , plutus-ledger-api
    , plutarch

  hs-source-dirs:  src

executable exporter
  import:         common
  main-is:        Main.hs
  build-depends:
    -- , base
    -- , bytestring
    -- , ply-plutarch
    -- , cardano-api
    , mlabs-plutus-template-onchain
    -- , plutus-ledger
    -- , plutus-ledger-api
    -- , serialise
    -- , text

  hs-source-dirs: exporter
